[gd_scene load_steps=20 format=3 uid="uid://dshjlrawv1gyb"]

[ext_resource type="Script" path="res://characters/player/playerv2.gd" id="1_6fimu"]
[ext_resource type="Texture2D" uid="uid://3yv5hx2p3sch" path="res://models/Cowboy_final/Beetle_move.png" id="2_kn8q8"]
[ext_resource type="Animation" uid="uid://chkrcb7h1yobc" path="res://models/Cowboy_8bit/walkUp.res" id="6_6q8cu"]
[ext_resource type="Resource" uid="uid://dcn4pfn8pdvl" path="res://characters/player/player_stat_scaler.tres" id="6_jirwl"]
[ext_resource type="PackedScene" uid="uid://bqi04w12vyyov" path="res://weapons/basic_weapon/assault_rifle.tscn" id="7_u6xnb"]
[ext_resource type="PackedScene" uid="uid://b1vwu2a4upfbu" path="res://characters/components/upgrade_component.tscn" id="8_g5ohr"]
[ext_resource type="PackedScene" uid="uid://cvinwqhgbqbxv" path="res://weapons/basic_weapon/shotgun.tscn" id="8_usxgj"]
[ext_resource type="Script" path="res://characters/components/experience_component.gd" id="9_io3wp"]
[ext_resource type="PackedScene" uid="uid://6nrsywyx2nfx" path="res://weapons/basic_weapon/sniper.tscn" id="9_p61p5"]
[ext_resource type="Script" path="res://characters/components/stat_component.gd" id="10_6qw1a"]
[ext_resource type="Script" path="res://characters/components/health_component.gd" id="10_buq5f"]
[ext_resource type="PackedScene" uid="uid://ce7uohvil47by" path="res://ui/components/health_bar.tscn" id="10_lie7l"]
[ext_resource type="PackedScene" uid="uid://b7oo4onbkakgp" path="res://weapons/basic_weapon/grenade_launcher.tscn" id="10_s4m4e"]
[ext_resource type="PackedScene" uid="uid://c8kltbveyhbjo" path="res://ui/components/exp_label.tscn" id="11_x4h1m"]
[ext_resource type="Script" path="res://characters/components/computer_player_input_component.gd" id="12_csdww"]

[sub_resource type="Animation" id="Animation_bhqmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Cowboy:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_wu6ow"]
resource_name = "walk"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Cowboy:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(4, 0), Vector2i(4, 0), Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26w5p"]
_data = {
"RESET": SubResource("Animation_bhqmy"),
"idle": ExtResource("6_6q8cu"),
"walk": SubResource("Animation_wu6ow")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h8dy7"]
radius = 9.0
height = 26.0

[node name="computer_player" type="CharacterBody2D"]
visibility_layer = 2
collision_layer = 2
collision_mask = 15
script = ExtResource("1_6fimu")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Cowboy" type="Sprite2D" parent="Marker2D"]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kn8q8")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_26w5p")
}
speed_scale = 10.0

[node name="ComputerPlayerInputComponent" type="Node2D" parent="." node_paths=PackedStringArray("player", "upgrade_component", "stat_component")]
script = ExtResource("12_csdww")
player = NodePath("..")
upgrade_component = NodePath("../UpgradeComponent")
stat_component = NodePath("../StatComponent")

[node name="UpgradeComponent" parent="." node_paths=PackedStringArray("experience_component", "stat_component") instance=ExtResource("8_g5ohr")]
position = Vector2(0, -57)
experience_component = NodePath("../ExperienceComponent")
stat_component = NodePath("../StatComponent")
stat_scaler = ExtResource("6_jirwl")
up_weapon = ExtResource("7_u6xnb")
down_weapon = ExtResource("8_usxgj")
right_weapon = ExtResource("9_p61p5")
left_weapon = ExtResource("10_s4m4e")

[node name="ExperienceComponent" type="Node2D" parent="."]
script = ExtResource("9_io3wp")
max_level = 10
initial_level_threshold = 10
threshold_multiplier = 2

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("stat_component")]
script = ExtResource("10_buq5f")
stat_component = NodePath("../StatComponent")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -63.0
offset_top = 23.0
offset_right = 193.0
offset_bottom = 92.0
scale = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthBar" parent="MarginContainer/HBoxContainer" node_paths=PackedStringArray("health_component") instance=ExtResource("10_lie7l")]
layout_direction = 1
layout_mode = 2
health_component = NodePath("../../../HealthComponent")

[node name="ExpLabel" parent="MarginContainer/HBoxContainer" node_paths=PackedStringArray("experience_component") instance=ExtResource("11_x4h1m")]
layout_mode = 2
size_flags_horizontal = 4
experience_component = NodePath("../../../ExperienceComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 2
position = Vector2(1.13687e-12, 5)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_h8dy7")

[node name="StatComponent" type="Node" parent="."]
script = ExtResource("10_6qw1a")
